# netbox-plugin-config-officer

./: Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
config_officer/: __init__.py  choices.py  collect.py  config_manage.py  config_manager.py  custom_exceptions.py  filters.py  forms.py  git_manager.py  models.py  navigation.py  ssh_config  tables.py  urls.py  views.py  worker.py
config_officer/api/: views.py
config_officer/deprecated_api/: __init__.py  serializers.py  urls.py
config_officer/migrations/: 0001_initial.py
config_officer/templates/config_officer/: collect_configs_list.html  collection_message.html  compliance_view.html  device_runnig_config.html  device_running_config.html  message.html  my_obj_bulk_add_component.html  my_obj_list.html  navi_panel.html  service_list.html  service_mapping_list.html  service_rule_list.html  service_view.html  template_list.html  template_view.html
netbox-myplugins/: Dockerfile  requirements.txt
