[tool.poetry]
name = "netbox-plugin-config-officer"
version = "0.0.3"
description = "NetBox plugin that collect running config from cisco, indicates diffs and check compliance with templates"
authors = ["Sergei Artemov <artemov.sergey1989@gmail.com>"]
license = "Apache-2.0"
packages = [
    { include = "config_officer" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
GitPython = "^3.1.13"
PyDriller = "1.15.3"
XlsxWriter = "^1.3.7"
diffios = "^0.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
